manifests/wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-wordpress-ingress
  namespace: qa-wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-next-upstream: error
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "10"
spec:
  tls:
    - hosts:
        - qa-dev.wordlift.it
      secretName: wordpress-server-tls-secret
  rules:
    - host: qa-dev.wordlift.it
      http:
        paths:
          - path: /4.4/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-44
                port:
                  number: 80
          - path: /4.7/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-47
                port:
                  number: 80
          - path: /5.0/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-50
                port:
                  number: 80
          - path: /5.4/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-54
                port:
                  number: 80
          - path: /5.5/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-55
                port:
                  number: 80
          - path: /5.6/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-56
                port:
                  number: 80
          - path: /5.7/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-57
                port:
                  number: 80
          - path: /5.8/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-58
                port:
                  number: 80
          - path: /5.9/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-59
                port:
                  number: 80
          - path: /6.0/
            pathType: Prefix
            backend:
              service:
                name: qa-wordpress-60
                port:
                  number: 80
